<resources>
    <string name="app_name">My Location App</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="addRegiao">Adicionar Região</string>
    <string name="addBD">Gravar BD</string>
    <string name="startLoc">\></string>
    <string name="stopLoc">||</string>
    <string name="map">Maps API</string>
    <string name="location_permission_denied">Permission denied</string>
    <string name="permission_required_toast">Permission required</string>
    <string name="permission_rationale_location">Permission rationale</string>
</resources>